--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
+beautifulsoup4==4.8.0
+certifi==2019.6.16
+chardet==3.0.4
 Django==2.2.4
-django-bootstrap-form==3.4
-django-extensions==2.2.1
-django-widget-tweaks==1.4.5
+html5lib==1.0.1
+idna==2.8
+lorem==0.1.1
+lxml==4.4.0
+pygame==1.9.6
 python-decouple==3.1
 pytz==2019.2
+requests==2.22.0
 six==1.12.0
+soupsieve==1.9.2
 sqlparse==0.3.0
+urllib3==1.25.3
+webencodings==0.5.1
