--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
 Django==3.1
+sqlparse==0.4.1
 django-widget-tweaks==1.4.8
+beautifulsoup4==4.9.3
+chardet==4.0.0
+html5lib==1.1
+idna==3.1
+python-decouple==3.4
+pytz==2021.1
+soupsieve==2.2.1
+lxml==4.6.3
+chardet==4.0.0
+certifi==2020.12.5
