--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==3.1
+Django>=3.1.6
 sqlparse==0.4.1
 django-widget-tweaks==1.4.8
 beautifulsoup4==4.9.3
@@ -11,3 +11,4 @@ soupsieve==2.2.1
 lxml==4.6.3
 chardet==4.0.0
 certifi==2020.12.5
+faker==3.0.1
